# collaboration-ai

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  Dockerfile.subapp  Makefile  README.md  agent_extensions.py  eslint.config.mjs  hof-module.json  hofos-ui.config.json  package.json  pnpm-lock.yaml  prompt.md  tools.json  tsconfig.json  turbo.json
app/: celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  hof.config.py  pyproject.toml
app/domain/agent_api/: audit.py  bin.py  budgets.py  mcp_server.py  registry.py  scopes.py  stdio.py
app/domain/agents/: functions.py  table.py
app/domain/attachments/: functions.py  table.py
app/domain/bridges/: __init__.py  flows.py  policy.py  protocol.py
app/domain/channels/: functions.py  table.py
app/domain/chat/: __init__.py  scheduler.py  search.py  threads.py  unread.py
app/domain/demo/: __init__.py  functions.py
app/domain/events/: __init__.py  functions.py  ids.py  model.py  payloads.py  projection_writer.py  projector.py  repository.py  table.py
app/domain/huddles/: __init__.py  functions.py  table.py
app/domain/links/: functions.py
app/domain/messages/: functions.py  functions_phase3.py  sanitize.py  table.py
app/domain/notifications/: __init__.py  table.py
app/domain/shared/: command_bus.py  decorators.py  handlers.py  hof_jwt.py  jwt_middleware.py  rate_limit.py  runtime.py  static_web.py  sync_cursor.py
app/domain/sync/: __init__.py  bridge.py  fanout.py  messages.py  presence.py  queue.py  redis_fanout.py  registry.py  ws_gateway.py
app/domain/users/: __init__.py  functions.py  table.py
app/domain/workspaces/: functions.py  table.py
app/functions/: __init__.py  register.py
app/migrations/: env.py
app/migrations/versions/: 6831398101c6_recover_huddles_notifications.py  9f1a2b3c4d5e_meeting_metadata.py  af6b6c68da87_auto_generated.py  ba3365dfe1df_initial_schema.py  c1a4e2f8b910_notifications_huddles.py  d2c91b4e8a17_drop_legacy_bridge_columns.py
app/scripts/: seed.py
app/tables/: __init__.py  register.py
app/tests/: conftest.py
app/tests/integration/: test_sso_handoff.py
(+96 files in other folders)
