[project]
name = "collabai-app"
version = "0.1.0"
description = "collaboration-ai backend — hof-engine application implementing event-sourced team chat with first-class agents."
requires-python = ">=3.12"
dependencies = [
    # Pinned to git main, mirroring hof-os/backend/pyproject.toml so all
    # three repos (hof-os, office-ai-via-bridges, this one) consume the
    # same hof-engine head. PyPI lags well behind (latest there is
    # 0.1.x); we want the same code that hof-os ships against.
    "hof-engine @ git+https://github.com/jhoetter/hof-engine.git",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "celery[redis]>=5.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "boto3>=1.35",
    "pillow>=11.0",
    "bleach>=6.2",
    "markdown-it-py>=3.0",
    "pywebpush>=2.0",
    "mcp>=1.0",
    "websockets>=14",
    # LiveKit SDK for huddle AccessToken minting. Optional — the
    # huddles backend falls back to a hand-rolled HMAC-SHA256 JWT if
    # the SDK is unavailable, so installs that don't need the huddle
    # feature can drop this dep.
    "livekit-api>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "freezegun>=1.5",
]

[project.scripts]
collabai-mcp = "domain.agent_api.bin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["domain", "tables", "functions", "flows", "cron"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "__pycache__", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
